--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "axios": "^1.7.7",
     "express": "^4.21.1",
     "qrcode": "^1.5.4",
-    "mongodb": "^5.7.0",
+    "mongodb": "^5.7.0"
   }
 }
